--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "server:test:watch": "mocha  -w --recursive ./server/**/**",
     "test": "npm run server:test && npm run client:test",
     "test:coverage": "npm run server:test:coverage && npm run client:test:coverage",
-    "storybook": "start-storybook -p 6006",
+    "start": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "nyc": {
@@ -114,10 +114,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
-    "@storybook/addon-actions": "^6.0.26",
-    "@storybook/addon-essentials": "^6.0.26",
-    "@storybook/addon-links": "^6.0.26",
-    "@storybook/react": "^6.0.26",
+    "@storybook/addon-actions": "^6.4.17",
+    "@storybook/addon-essentials": "^6.4.17",
+    "@storybook/addon-links": "^6.4.17",
+    "@storybook/react": "^6.4.17",
     "babel-eslint": "^10.1.0",
     "babel-jest": "23.6.0",
     "babel-loader": "^8.0.5",
