--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "Full stack core framework",
   "main": "index.js",
+  "startYear":"2021",
+  "author":"Swish Qube",
   "scripts": {
     "client:test": "node scripts/test.js --no-watch",
     "client:test:watch": "node scripts/test.js",
@@ -13,6 +15,7 @@
     "test": "npm run server:test && npm run client:test",
     "test:coverage": "npm run server:test:coverage && npm run client:test:coverage",
     "start": "start-storybook -p 6006",
+    "dist": "rm -rf dist && webpack && node scripts/dist.js",
     "build-storybook": "build-storybook"
   },
   "nyc": {
@@ -53,8 +56,11 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "cookie-parser": "^1.4.5",
     "css-loader": "1.0.0",
+    "d3": "^7.3.0",
+    "d3-tip": "^0.9.1",
     "dotenv": "^6.2.0",
     "dotenv-expand": "4.2.0",
+    "ejs": "^3.1.6",
     "eslint-config-react-app": "^3.0.8",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
@@ -64,6 +70,8 @@
     "file-loader": "2.0.0",
     "firebase": "^7.16.1",
     "fs-extra": "7.0.1",
+    "fse": "^4.0.1",
+    "gsap": "^3.9.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "http-proxy-middleware": "^0.19.2",
     "jest-pnp-resolver": "1.0.2",
@@ -78,6 +86,7 @@
     "mongoose": "^5.9.25",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
+    "nodemailer": "^6.7.2",
     "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -91,8 +100,10 @@
     "react-chartist": "^0.14.3",
     "react-dev-utils": "^8.0.0",
     "react-dom": "^16.13.1",
+    "react-google-recaptcha": "^2.1.0",
     "react-html-parser": "^2.0.2",
     "react-infinite-calendar": "^2.3.1",
+    "react-material-ui-carousel": "^3.1.1",
     "react-router-dom": "^4.3.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
@@ -101,11 +112,7 @@
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
     "underscore": "^1.10.2",
-    "url-loader": "1.1.2",
-    "webpack": "^4.43.0",
-    "webpack-dev-server": "3.1.14",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
+    "url-loader": "1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
@@ -114,10 +121,12 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@rollup/plugin-json": "^4.1.0",
     "@storybook/addon-actions": "^6.4.17",
     "@storybook/addon-essentials": "^6.4.17",
     "@storybook/addon-links": "^6.4.17",
     "@storybook/react": "^6.4.17",
+    "archiver": "^5.3.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "23.6.0",
     "babel-loader": "^8.0.5",
@@ -130,10 +139,23 @@
     "eslint": "^5.12.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-react": "^7.20.3",
+    "fs": "0.0.1-security",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.6.0",
     "mocha": "^6.2.3",
     "nyc": "^15.1.0",
-    "react-is": "^17.0.0"
+    "path": "^0.12.7",
+    "react-is": "^17.0.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-babel-minify": "^10.0.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-scss": "^3.0.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "3.1.14",
+    "webpack-manifest-plugin": "2.0.4",
+    "webpack-node-externals": "^3.0.0",
+    "workbox-webpack-plugin": "3.6.3"
   }
 }
