--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Full stack core framework",
   "main": "index.js",
-  "startYear":"2021",
-  "author":"Swish Qube",
+  "startYear": "2021",
+  "author": "Swish Qube",
   "scripts": {
     "client:test": "node scripts/test.js --no-watch",
     "client:test:watch": "node scripts/test.js",
@@ -41,6 +41,7 @@
   ],
   "dependencies": {
     "@amcharts/amcharts4": "^4.9.30",
+    "axios": "^0.25.0",
     "@babel/polyfill": "^7.10.4",
     "@date-io/moment": "^1.3.9",
     "@material-ui/core": "^4.11.2",
