--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "client:test": "node scripts/test.js --no-watch",
     "client:test:watch": "node scripts/test.js",
     "client:test:coverage": "node scripts/test.js --no-watch --coverage",
-    "server:test": "mocha --file ./tests/setup.js  --exit --recursive ./server/**/**",
-    "server:test:coverage": "nyc --reporter=html --reporter=lcov --reporter=text mocha --file ./tests/setup.js  --exit --recursive ./server/**/**",
-    "server:test:watch": "mocha  -w --recursive ./server/**/**",
+    "server:test": "mocha --file ./tests/setup.js  --exit --recursive --config ./mocha-server.config.js",
+    "server:test:coverage": "nyc --reporter=html --reporter=lcov --reporter=text mocha --file ./tests/setup.js  --exit --recursive --config ./mocha-server.config.js",
+    "server:test:watch": "mocha  -w --recursive --config ./mocha-server.config.js",
+    
+    
     "test": "npm run server:test && npm run client:test",
     "test:coverage": "npm run server:test:coverage && npm run client:test:coverage",
     "start": "start-storybook -p 6006",
@@ -21,9 +23,11 @@
   "nyc": {
     "all": true,
     "include": [
-      "server/**/**/*.js"
+      "server/**/**/*.js",
+      "cms/server/**/**/*.js"
     ],
     "exclude": [
+      "cms/server/**/*spec.js",
       "server/**/*spec.js",
       "server/test/**/*.js",
       "server/mock/**/*.js"
