--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 before_script:
-  - echo ======= before script ========
+  - echo ======= before script start ========
   - export _TOKEN=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
   - export GENERATE_SOURCEMAP=false
   - node -v
