--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sq-core",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "description": "Full stack framework for cms and react app development",
   "main": "index.js",
   "startYear": "2021",
@@ -44,8 +44,30 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "@amcharts/amcharts4": "^4.9.30",
     "axios": "^0.25.0",
+    "bfj": "6.1.1",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
+    "dotenv-expand": "4.2.0",
+    "ejs": "^3.1.6",
+    "express": "^4.16.4",
+    "express-session": "^1.17.1",
+    "file-loader": "2.0.0",
+    "fs-extra": "7.0.1",
+    "fse": "^4.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.33",
+    "mongoose": "^5.9.25",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
+    "serve-favicon": "^2.5.0",
+    "socket.io": "^2.3.0",
+    "underscore": "^1.10.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@amcharts/amcharts4": "^4.9.30",
     "@babel/polyfill": "^7.10.4",
     "@date-io/moment": "^1.3.9",
     "@material-ui/core": "^4.11.2",
@@ -55,43 +77,27 @@
     "@material-ui/styles": "^4.11.2",
     "@svgr/webpack": "4.1.0",
     "animated-scroll-to": "^2.0.12",
-    "bfj": "6.1.1",
-    "body-parser": "^1.18.3",
     "bootstrap": "^4.5.3",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "cookie-parser": "^1.4.5",
     "css-loader": "1.0.0",
     "d3": "^7.3.0",
     "d3-tip": "^0.9.1",
-    "dotenv": "^6.2.0",
-    "dotenv-expand": "4.2.0",
-    "ejs": "^3.1.6",
     "eslint-config-react-app": "^3.0.8",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
-    "express": "^4.16.4",
-    "express-session": "^1.17.1",
-    "file-loader": "2.0.0",
     "firebase": "^7.16.1",
-    "fs-extra": "7.0.1",
-    "fse": "^4.0.1",
     "gsap": "^3.9.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "http-proxy-middleware": "^0.19.2",
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
-    "jsonwebtoken": "^8.5.1",
     "mini-css-extract-plugin": "0.5.0",
     "mobx": "^5.15.4",
     "mobx-react": "^5.4.3",
-    "moment": "^2.27.0",
-    "moment-timezone": "^0.5.33",
-    "mongoose": "^5.9.25",
-    "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
-    "nodemailer": "^6.7.2",
     "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
@@ -112,15 +118,9 @@
     "react-router-dom": "^4.3.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
-    "serve-favicon": "^2.5.0",
-    "socket.io": "^2.3.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
-    "underscore": "^1.10.2",
-    "url-loader": "1.1.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.10.5",
+    "url-loader": "1.1.2",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
