--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sq-core",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "Full stack framework for cms and react app development",
   "main": "index.js",
   "startYear": "2021",
@@ -63,43 +63,74 @@
     "nodemailer": "^6.7.2",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.3.0",
-    "underscore": "^1.10.2"
+    "underscore": "^1.10.2",
+    "archiver": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
-    "@amcharts/amcharts4": "^4.9.30",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/polyfill": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@date-io/moment": "^1.3.9",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.2",
+    "@rollup/plugin-json": "^4.1.0",
+    "@storybook/addon-actions": "^6.4.17",
+    "@storybook/addon-essentials": "^6.4.17",
+    "@storybook/addon-links": "^6.4.17",
+    "@storybook/react": "^6.4.17",
     "@svgr/webpack": "4.1.0",
     "animated-scroll-to": "^2.0.12",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "23.6.0",
+    "babel-loader": "^8.0.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "bootstrap": "^4.5.3",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.3.0",
+    "chai-spies": "^1.0.0",
     "cookie-parser": "^1.4.5",
     "css-loader": "1.0.0",
     "d3": "^7.3.0",
     "d3-tip": "^0.9.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^5.12.0",
     "eslint-config-react-app": "^3.0.8",
+    "eslint-loader": "^2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "^7.20.3",
     "firebase": "^7.16.1",
+    "fs": "0.0.1-security",
     "gsap": "^3.9.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "http-proxy-middleware": "^0.19.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^24.6.0",
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
     "mini-css-extract-plugin": "0.5.0",
     "mobx": "^5.15.4",
     "mobx-react": "^5.4.3",
+    "mocha": "^6.2.3",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
+    "nyc": "^15.1.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
+    "path": "^0.12.7",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -114,48 +145,19 @@
     "react-google-recaptcha": "^2.1.0",
     "react-html-parser": "^2.0.2",
     "react-infinite-calendar": "^2.3.1",
+    "react-is": "^17.0.0",
     "react-material-ui-carousel": "2.2.1",
     "react-router-dom": "^4.3.1",
     "resolve": "1.10.0",
-    "sass-loader": "7.1.0",
-    "style-loader": "0.23.1",
-    "terser-webpack-plugin": "1.2.2",
-    "url-loader": "1.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
-    "@rollup/plugin-json": "^4.1.0",
-    "@storybook/addon-actions": "^6.4.17",
-    "@storybook/addon-essentials": "^6.4.17",
-    "@storybook/addon-links": "^6.4.17",
-    "@storybook/react": "^6.4.17",
-    "archiver": "^5.3.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "23.6.0",
-    "babel-loader": "^8.0.5",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "chai-http": "^4.3.0",
-    "chai-spies": "^1.0.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^5.12.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-react": "^7.20.3",
-    "fs": "0.0.1-security",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.6.0",
-    "mocha": "^6.2.3",
-    "nyc": "^15.1.0",
-    "path": "^0.12.7",
-    "react-is": "^17.0.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-babel-minify": "^10.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-scss": "^3.0.0",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.1",
+    "terser-webpack-plugin": "1.2.2",
+    "url-loader": "1.1.2",
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
