--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sq-core",
-  "version": "1.0.8",
+  "version": "2.0.0",
   "description": "Full stack framework for cms and react app development",
   "main": "index.js",
   "startYear": "2021",
@@ -10,7 +10,7 @@
     "client:test:watch": "node scripts/test.js",
     "client:test:coverage": "node scripts/test.js --no-watch --coverage",
     "server:test": "mocha --file ./tests/setup.js  --exit --recursive --config ./mocha-server.config.js",
-    "server:test:coverage": "nyc --reporter=html --reporter=lcov --reporter=text mocha --file ./tests/setup.js  --exit --recursive --config ./mocha-server.config.js",
+    "server:test:coverage": "nyc --reporter=html --reporter=lcov --reporter=text mocha  --reporter mocha-junit-reporter --reporter-options mochaFile=coverage/server/junit.xml --file ./tests/setup.js  --exit --recursive --config ./mocha-server.config.js",
     "server:test:watch": "mocha  -w --recursive --config ./mocha-server.config.js",
     "test": "npm run server:test && npm run client:test",
     "build:apps:rollup": "rollup -c rollup.cms.config.js --environment INCLUDE_DEPS,BUILD:production",
@@ -80,6 +80,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.2",
+    "@reduxjs/toolkit": "^1.8.1",
     "@rollup/plugin-json": "^4.1.0",
     "@storybook/addon-actions": "^6.4.17",
     "@storybook/addon-essentials": "^6.4.17",
@@ -112,13 +113,13 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "^7.20.3",
-    "firebase": "^7.16.1",
     "fs": "0.0.1-security",
     "gsap": "^3.9.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "http-proxy-middleware": "^0.19.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.6.0",
+    "jest-junit": "^13.2.0",
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
@@ -126,6 +127,7 @@
     "mobx": "^5.15.4",
     "mobx-react": "^5.4.3",
     "mocha": "^6.2.3",
+    "mocha-junit-reporter": "^2.0.2",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "nyc": "^15.1.0",
@@ -147,7 +149,9 @@
     "react-infinite-calendar": "^2.3.1",
     "react-is": "^17.0.0",
     "react-material-ui-carousel": "2.2.1",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.2.0",
     "resolve": "1.10.0",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-babel-minify": "^10.0.0",
