--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sq-core",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Full stack framework for cms and react app development",
   "main": "index.js",
   "startYear": "2021",
@@ -74,6 +74,7 @@
     "@babel/polyfill": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@babel/runtime": "^7.17.9",
     "@date-io/moment": "^1.3.9",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
