--- a/package.json
+++ b/package.json
@@ -77,11 +77,12 @@
     "@babel/preset-react": "^7.10.4",
     "@babel/runtime": "^7.17.9",
     "@date-io/moment": "^1.3.9",
-    "@material-ui/core": "^4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/pickers": "^3.3.10",
-    "@material-ui/styles": "^4.11.2",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.81",
+    "@mui/material": "^5.7.0",
+    "@mui/styles": "^5.7.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@rollup/plugin-json": "^4.1.0",
     "@storybook/addon-actions": "^6.4.17",
@@ -150,7 +151,7 @@
     "react-html-parser": "^2.0.2",
     "react-infinite-calendar": "^2.3.1",
     "react-is": "^17.0.0",
-    "react-material-ui-carousel": "2.2.1",
+    "react-material-ui-carousel": "^3.3.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.2.0",
