--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "css-loader": "1.0.0",
     "d3": "^7.3.0",
     "d3-tip": "^0.9.1",
+    "date-fns": "^2.28.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^5.12.0",
