--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "sq-core",
   "version": "2.4.0",
-  "private": true,
   "scripts": {
     "client:test": "node scripts/test.js --no-watch",
     "client:test:watch": "node scripts/test.js",
@@ -17,7 +16,7 @@
     "start": "start-storybook -p 6006",
     "clean:dist": "rm -rf dist && npm run dist",
     "dist": "webpack && webpack --config webpack.web.config.js && node scripts/dist.js",
-    "dist:push": "npm run dist && cd dist && git add . && git commit -m 'v2.2.x-update' && git push",
+    "dist:push": "npm run dist && cd dist && git add . && git commit -m 'v2.x.x-update' && git push",
     "dist:target": "npm version patch && rm -rf dist && webpack && webpack --config webpack.web.config.js && node scripts/dist.js && cd dist && npm pack && cd .. && node scripts/dist-post.js",
     "build-storybook": "build-storybook"
   },
@@ -61,6 +60,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
+    "@babel/polyfill": "^7.12.1",
     "@date-io/moment": "^1.3.9",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -132,13 +132,13 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
+    "react-google-recaptcha": "^2.1.0",
     "react-html-parser": "^2.0.2",
     "react-infinite-calendar": "^2.3.1",
     "react-material-ui-carousel": "^3.3.3",
     "react-mui-dropzone": "^4.0.6",
     "react-redux": "^8.0.1",
     "react-refresh": "^0.11.0",
-    "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^4.3.1",
     "react-rte": "^0.16.5",
     "redux": "^4.2.0",
