--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@mui/lab": "^5.0.0-alpha.81",
     "@mui/material": "^5.8.0",
     "@mui/styles": "^5.8.0",
+    "@mui/x-date-pickers": "^5.0.0-beta.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@reduxjs/toolkit": "^1.8.3",
     "@rollup/plugin-json": "^4.1.0",
