--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
