--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "highlight.js": "^11.5.1",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
+    "immutability-helper": "^3.1.1",
     "jest": "^27.4.3",
     "jest-junit": "^14.0.0",
     "jest-resolve": "^27.4.2",
@@ -135,6 +136,8 @@
     "react-app-polyfill": "^3.0.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dev-utils": "^12.0.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
     "react-google-recaptcha": "^2.1.0",
