--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,7 @@ build_release:
   script:
     - echo ======= release started ========
     - npm install
+    - npm version $CI_COMMIT_TAG
     - npm run-script test:coverage
     - npm run-script dist
     - cd dist
@@ -56,4 +57,4 @@ build_release:
         - dist/*.tgz
       expire_in: 48 hrs
   only:
-    - /^release/.*$/
+    - tags
