--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ build_release:
   stage: build
   script:
     - echo ======= release started ========
-    - npm version $CI_COMMIT_TAG --commit-hooks=false
+    - npm version $CI_COMMIT_TAG --git-tag-version false
     - npm install
     - npm run-script test:coverage
     - npm run-script dist
