--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sq-core",
-  "version": "2.x.x-latest",
+  "version": "2.0.0",
   "scripts": {
     "client:test": "node scripts/test.js --no-watch",
     "client:test:watch": "node scripts/test.js",
