--- a/cms/content/admin/forgotpassword.yaml
+++ b/cms/content/admin/forgotpassword.yaml
@@ -30,7 +30,7 @@ items:
         fields:
           - cmpType: Header
             header: Forgot password
-          - cmpType: InputField
+          - cmpType: Input
             label: Email Address
             name: email
             validators:
