--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mongoose": "^5.9.25",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
+    "react-color": "^2.19.3",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.3.0",
     "underscore": "^1.10.2"
