Added users search

--- a/cms/content/admin/portal/users/index.yaml
+++ b/cms/content/admin/portal/users/index.yaml
@@ -5,3 +5,9 @@ layout: apps/core/layouts/spa
 bodyClassName: 
 containerTemplate: AdminDashboard
 container: Users
+fieldMapping:
+  emailId:
+    name: email
+  contactNumber:
+    name: phone
+  
