--- a/cms/content/admin/portal/users/edit.yaml
+++ b/cms/content/admin/portal/users/edit.yaml
@@ -1,21 +1,36 @@
-title: Add New User
+title: Users
 template: apps/core/templates/page
-layout: apps/core/layouts/spa
+layout: apps/crm/layouts/page-spa
 containerTemplate: AdminDashboard
 contentBodyClass: container container-form
-reset:
-  type: clearAll
 hook:
   load:
+    - method: post
+      url: /api/v1/user/search
+      dataKey: resultUser
+      params:
+        emailId: .query.userId
     - method: get
-      url: /api/v1/admin/users/role
+      url: /api/v1/role
       params:
         userType: INTERNAL
       dataKey: roles
+
+
+
+reset:
+  type: clearAll
 init:
   drop_options:
     roles: .roles
+  user:
+    firstName: .resultUser.data.0.firstName
+    lastName: .resultUser.data.0.lastName
+    emailId: .resultUser.data.0.email
+    contactNumber: .resultUser.data.0.phone
+    role: .resultUser.data.0.roleCode
 merge:
+  currentEmail: .resultUser.data.0.email
   currentError: .lastError.key
   currentErrorMessage: .lastError.errorMessage
 items:
@@ -27,41 +42,45 @@ items:
         validators:
           - type: equals
             matchValue: true
+  - component: Alert
+    message: |
+      Unable to locate user
+    type: error
+    match:
+      currentEmail:
+        validators:
+          - type: notExists
   - component: ScreenHeader
     className: mt-wide mb-xtrawide
-    header: Add New User
-    subHeader: Add new user to list
-    headerTag: h3
+    header: Edit User
+    headerTag: h2
   - component: Form
     name: user
-    className: add-new-user mt-wide 
+    className: add-new-user mt-wide
     fields:
-      - name: firstName
+      - cmpType: Input
+        size: auto-form
+        name: firstName
         label: First Name
-        keyup: 
-          type: length
-          max: 50
         validators:
           - type: required
-      - name: lastName
+      - cmpType: Input
+        size: auto-form
+        name: lastName
         label: Last Name
-        keyup: 
-          type: length
-          max: 50
         validators:
           - type: required
-      - name: email
+      - cmpType: DataField
+        size: auto-form
+        name: emailId
         label: Email ID
         validators:
           - type: required
           - type: email
-      - name: contactNumber
+      - cmpType: Input
+        size: auto-form
+        name: contactNumber
         label: Phone
-        keyup:
-          type: length
-          max: 10
-        mask:
-          type: phone
         validators:
           - type: required
           - type: phone
@@ -73,7 +92,7 @@ items:
         valueField: code
         textField: name
         validators:
-          - type: required    
+          - type: required
   - component: Alert
     type: error
     className: mb-wide
@@ -85,22 +104,33 @@ items:
               matchValue: GENERIC_ERROR
   - component: Button
     buttonText: Save
-    actionType: submit
     size: large
-    url:  /api/v1/admin/user
-    inject:
-      disabled: isSubmitting
-    method: post
-    postHook: user.createUser
+    actionType: submit
+    url: /api/v1/user
+    method: patch
+    defaultResponse:
+      success:
+        data:
+          redirect: users
+        notification:
+          message: User updated successfully
+          type: success
+      error:
+        notification:
+          message: User updated failed
+          type: error
     params:
       firstName: .user.firstName
       lastName: .user.lastName
-      email: .user.email
+      email: .user.emailId
       phone: .user.contactNumber
       roleCode: .user.role
+
   - component: Button
     buttonText: Cancel
     size: large
     variant: outlined
     actionType: redirect
     to: usersList
+
+
