--- a/cms/content/admin/portal/pages/create.yaml
+++ b/cms/content/admin/portal/pages/create.yaml
@@ -1,7 +1,7 @@
-title: Page not found
+title: Create New page
 template: apps/core/templates/page
 className: sq-page sq-error-page
-contentBodyClass: container-form
+contentBodyClass: container container-form
 layout: apps/core/layouts/spa
 containerTemplate: AdminDashboard
 reset:
