--- a/cms/content/admin/portal/users/index.yaml
+++ b/cms/content/admin/portal/users/index.yaml
@@ -4,6 +4,9 @@ contentBodyClass: container-fluid container-ultrawide
 layout: apps/core/layouts/spa
 containerTemplate: AdminDashboard
 container: UsersList
+apiConfig:
+  getRoles:
+    url: /api/v1/admin/users/role
 fieldMapping:
   emailId:
     name: email
